Backend connecting the wallet to database

--- a/modules/gateways/blockonomics/assets/css/order.css
+++ b/modules/gateways/blockonomics/assets/css/order.css
@@ -150,6 +150,9 @@ svg {
 .bnomics-icon-btc:before {
   content: "\e901";
 }
+.bnomics-icon-usdt:before {
+  content: "\e902";
+}
 
 .bnomics-select-options {
   cursor:pointer;
