--- a/modules/gateways/blockonomics/assets/css/order.css
+++ b/modules/gateways/blockonomics/assets/css/order.css
@@ -391,3 +391,17 @@ svg {
   text-align: center;
   transition: 300ms all ease-in-out;
 }
+
+#web3-payment {
+  width: 300px;
+  margin: auto;
+}
+#web3-payment button {
+  width: 100%;
+  height: 32px;
+  background-color: blue;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  border: none;
+}
